--- a/Fitness-M/Fitness-M.csproj
+++ b/Fitness-M/Fitness-M.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Абонемент\Lib\TicketsManager.cs" />
+    <Compile Include="Абонемент\Lib\Абонементы\Tickets.cs" />
     <Compile Include="Абонемент\Lib\Виды_абонементов\KindTickets.cs" />
     <Compile Include="Абонемент\TicketsControl.cs">
       <SubType>UserControl</SubType>
@@ -138,9 +139,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Абонемент\Lib\Абонементы\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
