Начат отчет договор о предоставлении услуг

--- a/Fitness-M/Fitness-M.csproj
+++ b/Fitness-M/Fitness-M.csproj
@@ -67,6 +67,12 @@
     <Compile Include="Модель_данных\Тренажеры\FitnessEquipment.cs" />
     <Compile Include="Модель_данных\Тренажеры\FitnessEquipmentManager.cs" />
     <Compile Include="Модель_данных\Тренажеры\FitnessEquipmentWillBeReserve.cs" />
+    <Compile Include="Отчеты\Договор\ReportContract.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Отчеты\Договор\ReportContract.Designer.cs">
+      <DependentUpon>ReportContract.cs</DependentUpon>
+    </Compile>
     <Compile Include="Отчеты\Занятые_тренажеры\ReportFitnessEquipmentBusy.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -179,6 +185,9 @@
     <Compile Include="Представление\Тренажеры\График\FitnessEquipmentSchedule.Designer.cs">
       <DependentUpon>FitnessEquipmentSchedule.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Отчеты\Договор\ReportContract.resx">
+      <DependentUpon>ReportContract.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Отчеты\Занятые_тренажеры\ReportFitnessEquipmentBusy.resx">
       <DependentUpon>ReportFitnessEquipmentBusy.cs</DependentUpon>
     </EmbeddedResource>
